test/compile_fail/effect_reader_ask_without_context.zig
const shift = @import("shift");

const fake_cap = struct {};

comptime {
    _ = shift.effect.reader.ask(fake_cap, 123);
}
